--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M4 Challenge</title>
+  <title>Console-Finances</title>
 </head>
+
+<!--Body Starts Here-->
+
 <body>
   <script src="index.js"></script>
 </body>
